Added post logic back, yay
