# backend/src/main/kotlin/elsys/amalino7/features/comment/commentRoutes.kt
@@ -8,27 +8,15 @@ import io.ktor.server.response.*
 import io.ktor.server.routing.*
 import kotlin.uuid.Uuid
 
-fun Route.CommentRoutes(commentService: CommentService) {
+fun Route.commentRoutes(commentService: CommentService) {
     route("/post/{postId}/comments") {
-        get("/{id}") {
-            val id = call.parameters["id"]!!
-            val postId = call.parameters["postId"]!!
-            val comment = commentService.get(id.toLong(), postId)
-            if (comment == null) {
-                call.respond(HttpStatusCode.NotFound, "comment with id $id not found")
-            } else {
-                call.respond(HttpStatusCode.OK, comment)
-            }
-        }
-        get("/")
-        {
+        get {
             val postId = call.parameters["postId"]!!
             val comments = commentService.getCommentsByPostId(Uuid.parse(postId))
             call.respond(HttpStatusCode.OK, comments)
         }
         authenticate("auth-jwt") {
-            post("/")
-            {
+            post {
                 val postId = call.parameters["postId"]!!
                 val commentDto = call.receive<CommentCreateRequest>()
                 val user = call.principal<User>()!!
@@ -38,11 +26,23 @@ fun Route.CommentRoutes(commentService: CommentService) {
                 } else
                     call.respond(HttpStatusCode.OK, comment)
             }
+        }
+    }
+    route("/comments") {
+        get("/{id}") {
+            val id = call.parameters["id"]!!
+            val comment = commentService.get(id.toLong())
+            if (comment == null) {
+                call.respond(HttpStatusCode.NotFound, "comment with id $id not found")
+            } else {
+                call.respond(HttpStatusCode.OK, comment)
+            }
+        }
+        authenticate("auth-jwt") {
             delete("/{id}") {
                 val id = call.parameters["id"]!!
-                val postId = call.parameters["postId"]!!
                 val user = call.principal<User>()!!
-                val success = commentService.delete(id.toLong(), postId, user)
+                val success = commentService.delete(id.toLong(), user)
                 if (success) {
                     call.respond(HttpStatusCode.OK)
                 } else {
@@ -51,13 +51,11 @@ fun Route.CommentRoutes(commentService: CommentService) {
             }
             patch("/{id}") {
                 val id = call.parameters["id"]!!
-                call.parameters["postId"]!!
                 val newComment = call.receive<CommentUpdateRequest>()
                 val user = call.principal<User>()!!
                 commentService.update(newComment, user, id)
 
             }
         }
-
     }
 }
